<resources>
    <string name="app_name">RedditReader</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="open_in_browser">Open in browser</string>

    <string name="settings_subreddit_default">news</string>
    <string name="settings_subreddit_key">subreddit_key</string>
    <string name="settings_subreddit_title">Subreddit</string>
    <string name="settings_subreddit_summary">Subreddit or empty for all</string>

    <string name="settings_refresh_default">15</string>
    <string name="settings_refresh_key">refresh_key</string>
    <string name="settings_refresh_title">Refresh interval</string>
    <string name="settings_refresh_summary">In minutes</string>

    <string-array name="settings_refresh_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
